# Gomoku

./: .clang-format  .clangignore  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md
Design/Design_paper/: AllThreats.hpp
ci/UT/: CMakeLists.txt  main.cpp
ci/UT/AlphaBetaTest/: AlphaBetaTest.cpp  CMakeLists.txt  ScoreStub.cpp
ci/UT/BoardScoreTest/: BoardScoreTest.cpp  CMakeLists.txt
ci/UT/GomokuBoardTest/: CMakeLists.txt  GomokuBoardTest.cpp
ci/UT/GomokuGameTest/: CMakeLists.txt
ci/UT/MinMaxTest/: CMakeLists.txt  MinMaxTest.cpp  MinMaxTest.hpp
ci/UT/OpenBookTest/: CMakeLists.txt  OpenBookTest.cpp
ci/UT/ScoreTest/: CMakeLists.txt  ScoreTest.cpp
ci/UT/SingleListTest/: CMakeLists.txt  SingleListTest.cpp
ci/UT/SpotterTest/: CMakeLists.txt  SpotterTest.cpp  SpotterTest.hpp
ci/UT/StateEvaluationTest/: CMakeLists.txt  StateEvaluationTest.cpp
ci/UT/StubsGlobal/: GomokuGame.hpp  StubBoardIterator.cpp
ci/UT/ThreatsTests/Threat2CaseAATest/: CMakeLists.txt  Threat2CaseAATest.cpp
ci/UT/ThreatsTests/Threat2CaseATest/: CMakeLists.txt  Threat2CaseATest.cpp
ci/UT/ThreatsTests/Threat2CaseBTest/: CMakeLists.txt  Threat2CaseBTest.cpp
ci/UT/ThreatsTests/Threat2CaseCTest/: CMakeLists.txt  Threat2CaseCTest.cpp
ci/UT/ThreatsTests/Threat3CaseAATest/: CMakeLists.txt  Threat3CaseAATest.cpp
ci/UT/ThreatsTests/Threat3CaseATest/: CMakeLists.txt  Threat3CaseATest.cpp
ci/UT/ThreatsTests/Threat3CaseBTest/: CMakeLists.txt  Threat3CaseBTest.cpp
ci/UT/ThreatsTests/Threat3CaseCTest/: CMakeLists.txt  Threat3CaseCTest.cpp
ci/UT/ThreatsTests/Threat4CaseAATest/: CMakeLists.txt  Threat4CaseAATest.cpp
ci/UT/ThreatsTests/Threat4CaseATest/: CMakeLists.txt  Threat4CaseATest.cpp
ci/UT/ThreatsTests/Threat4CaseBTest/: CMakeLists.txt  Threat4CaseBTest.cpp
ci/UT/ThreatsTests/Threat4CaseCTest/: CMakeLists.txt  Threat4CaseCTest.cpp
ci/UT/ThreatsTests/ThreatWinnerTest/: CMakeLists.txt  ThreatWinnerTest.cpp
ci/UT/VectorLightTest/: CMakeLists.txt  VectorLightTest.cpp
ci/UT/VectorUniqueTest/: CMakeLists.txt  VectorUniqueTest.cpp
ci/framework_cppunit-3.7_linux/src/CppUTest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ci/framework_cppunit-3.7_linux/src/CppUTestExt/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: toolchain-gcc-default.cmake
scripts/cmake/: toolchain-gcc-default.cmake
scripts/code_format/: .clangignore  clang-format.py
src/: CMakeLists.txt  main.cpp
src/Headers/: Board.hpp  BoardIterator.hpp  BoardScore.hpp  GomokuBoard.hpp  GomokuGame.hpp  Logger.hpp  ObserverIf.hpp  OpenBook.hpp  Score.hpp  SinglethonTemplate.h  Spotter.hpp  TwoPlayerGame.hpp
src/Headers/DataContainers/: Graph.hpp  GraphIterator.hpp  IteratorIf.hpp  PriorityQueue.hpp  SingleList.hpp  SingleListIterator.hpp  VectorLight.hpp  VectorLightIterator.hpp  VectorUnique.hpp
src/Headers/SearchAlgorithms/: AlphaBeta.hpp  MinMax.hpp  SearchTreeAlgorithmIf.hpp  StateEvaluation.hpp  StateEvaluationIf.hpp
src/Headers/Threats/: Threat2CaseA.hpp  Threat2CaseAA.hpp  Threat2CaseB.hpp  Threat2CaseC.hpp  Threat3CaseA.hpp  Threat3CaseAA.hpp  Threat3CaseB.hpp  Threat3CaseC.hpp  Threat4CaseA.hpp  Threat4CaseAA.hpp  Threat4CaseB.hpp  Threat4CaseC.hpp  ThreatFinder.hpp  ThreatWinner.hpp  ThreatsBloodRelation.hpp
src/Sources/: BoardScore.cpp  GomokuBoard.cpp  GomokuGame.cpp  Logger.cpp  OpenBook.cpp  Score.cpp  Spotter.cpp
src/Sources/DataContainers/: Graph.cpp  VectorLight.cpp
src/Sources/SearchAlgorithms/: AlphaBeta.cpp  MinMax.cpp  StateEvaluation.cpp
src/Sources/Threats/: Threat2CaseA.cpp  Threat2CaseAA.cpp  Threat2CaseB.cpp  Threat2CaseC.cpp  Threat3CaseA.cpp  Threat3CaseAA.cpp  Threat3CaseB.cpp  Threat3CaseC.cpp  Threat4CaseA.cpp  Threat4CaseAA.cpp  Threat4CaseB.cpp  Threat4CaseC.cpp  ThreatFinder.cpp  ThreatWinner.cpp  ThreatsBloodRelation.cpp
utils/docker_builder/: Dockerfile
utils/docker_doxygen/: Dockerfile  README.md  doxy_generator.sh
